# fpga-sequencer

./: .gitignore  CMakeLists.txt  Makefile  README.md  pwm  pwm.sv  pwm_tb.sv  test_gui.sh  tetris  top.sv  visual_style.gtkw
.github/: actions.yml
.github/workflows/: synthesis-and-test.yml
docs/: README.md  TWO_TERMINAL_WORKFLOW.md  UPDATE_SUMMARY.md  neotrellis_pcb.md
hdl/: README.md  audio_controller.sv  button_matrix_controller.sv  model.sv  pwm.sv  rotary_encoder.sv  seven_segment.sv  top.sv  uart_tx.sv
hdl/rotary_encoder/: Makefile  rotary_encoder  rotary_encoder.sv
scripts/: README.md  demo.sh  run_gui.sh  send_commands.sh  test_binary_protocol.sh  test_gui.sh  test_two_terminal.sh
src/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  pitch_graph_widget.cpp  pitch_graph_widget.h  sequencer_model.cpp  sequencer_model.h  uart_parser.cpp  uart_parser.h
testbench/: button_matrix_controller_tb.sv  rotary_encoder_tb.sv  rotary_encoder_test_top.sv  top_tb.sv
tests/: CMakeLists.txt  test_sequencer.cpp
tools/: CMakeLists.txt  mock_uart_sender.cpp
